# acheron

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  acheron_en.ts  resources.qrc  rnnoise.cmake  vcpkg.json
.github/workflows/: build.yml
resources/desktop/: io.github.ouwou.acheron.desktop
src/: main.cpp
src/Core/: AccountInfo.hpp  AttachmentCache.cpp  AttachmentCache.hpp  ClientInstance.cpp  ClientInstance.hpp  ForumManager.cpp  ForumManager.hpp  ImageManager.cpp  ImageManager.hpp  JsonUtils.hpp  Logging.cpp  Logging.hpp  MessageManager.cpp  MessageManager.hpp  PendingAttachment.hpp  PermissionManager.cpp  PermissionManager.hpp  ReadStateManager.cpp  ReadStateManager.hpp  RelationshipManager.cpp  RelationshipManager.hpp  Session.cpp  Session.hpp  Snowflake.cpp  Snowflake.hpp  TimeUtils.hpp  TypingTracker.cpp  TypingTracker.hpp  UserManager.cpp  UserManager.hpp
src/Core/AV/: AudioPipeline.cpp  AudioPipeline.hpp  IAudioBackend.hpp  MiniaudioAudioBackend.cpp  MiniaudioAudioBackend.hpp  NoiseSuppressor.cpp  NoiseSuppressor.hpp  VoiceManager.cpp  VoiceManager.hpp
src/Core/Markdown/: Parser.cpp  Parser.hpp
src/Core/Theme/: Generator.cpp  Generator.hpp  Icons.cpp  Icons.hpp  Manager.cpp  Manager.hpp  Stylesheet.cpp  Stylesheet.hpp  Tokens.cpp  Tokens.hpp
src/Discord/: CaptchaResolver.hpp  CdnUrls.cpp  CdnUrls.hpp  Client.cpp  Client.hpp  ClientIdentity.cpp  CurlUtils.cpp  CurlUtils.hpp  Entities.hpp  Enums.hpp  Events.hpp  Gateway.cpp  Gateway.hpp  HttpClient.cpp  HttpClient.hpp  IngestThread.cpp  IngestThread.hpp  Outbound.hpp  RemoteAuthClient.cpp  RemoteAuthClient.hpp  RequestWorker.cpp  RequestWorker.hpp
src/Discord/AV/: VoiceClient.cpp  VoiceClient.hpp  VoiceEncryption.cpp  VoiceEnums.hpp  VoiceGateway.cpp
src/Proto/: ProtoReader.cpp
src/Storage/: AccountRepository.cpp  AccountRepository.hpp  BaseRepository.cpp  BaseRepository.hpp  ChannelRepository.cpp  ChannelRepository.hpp  DatabaseManager.cpp  GuildRepository.cpp  MemberRepository.cpp  MemberRepository.hpp  MessageRepository.cpp  MessageRepository.hpp  RoleRepository.cpp  RoleRepository.hpp  UserRepository.cpp  UserRepository.hpp
src/UI/: AccountsModel.cpp  AccountsModel.hpp  AccountsWindow.cpp  AvatarRequestTracker.hpp  BrowserCaptchaResolver.cpp  BrowserCaptchaResolver.hpp  ConnectionBanner.cpp  ConnectionBanner.hpp  ElidedLabel.cpp  ElidedLabel.hpp  ImageViewer.cpp  MainWindow.cpp  MainWindow.hpp  SlowModeIndicator.cpp  SlowModeIndicator.hpp  TypingIndicator.cpp  TypingIndicator.hpp  VoiceStatusBar.cpp  VoiceStatusBar.hpp  VoiceWindow.cpp  VoiceWindow.hpp
src/UI/Accounts/: AccountsModel.cpp  AccountsModel.hpp  AccountsWindow.cpp  AccountsWindow.hpp
src/UI/ChannelList/: ChannelDelegate.cpp  ChannelDelegate.hpp  ChannelFilterProxyModel.cpp  ChannelFilterProxyModel.hpp  ChannelNode.hpp  ChannelTreeModel.cpp  ChannelTreeModel.hpp  ChannelTreeView.cpp  ChannelTreeView.hpp  ServerRailDelegate.cpp  ServerRailDelegate.hpp  ServerRailModel.cpp  ServerRailModel.hpp  ServerRailView.cpp  ServerRailView.hpp
src/UI/Chat/: ChatDelegate.cpp  ChatLayout.cpp  ChatLayout.hpp  ChatModel.cpp  ChatModel.hpp  ChatView.cpp  ChatView.hpp
src/UI/Dialogs/: BasePopup.cpp  BasePopup.hpp  ConfirmPopup.cpp  QRLoginDialog.cpp  QRLoginDialog.hpp  UserProfilePopup.cpp  UserProfilePopup.hpp
src/UI/Forum/: ForumBrowser.cpp  ForumBrowser.hpp  ForumPostDelegate.cpp  ForumPostDelegate.hpp  ForumPostModel.cpp  ForumPostModel.hpp  NewPostDialog.cpp  NewPostDialog.hpp
src/UI/Input/: AttachmentPreviewPanel.cpp  AttachmentPreviewPanel.hpp  MessageInput.cpp  MessageInput.hpp
src/UI/MemberList/: MemberListModel.cpp  MemberListModel.hpp  MemberListView.cpp
src/UI/Settings/: AppearancePage.cpp  AppearancePage.hpp  GeneralPage.cpp  GeneralPage.hpp  SettingsWindow.cpp  SettingsWindow.hpp
src/UI/TabBar/: TabBar.cpp  TabBar.hpp
src/UI/ThreadBrowser/: ThreadBrowserPopup.cpp  ThreadBrowserPopup.hpp
